# eCircuit

./: .gitignore  CLAUDE.md  LICENCE.md  README.md  ecircuit  pyproject.toml
.github/workflows/: ci.yml
src/ecircuit/: __init__.py  cli.py
src/ecircuit/rendering/: __init__.py  canvas.py  icbox.py  ladder.py  renderer.py
src/ecircuit/simulation/: __init__.py  deck.py  models.py  runner.py
src/ecircuit/text2circuit/: __init__.py  bom.py  client.py  models.py  netlist.py  pinouts.py  pipeline.py  prompts.py  validate.py
src/ecircuit/text2pcb/: __init__.py
tests/: test_cli.py  test_pinouts.py  test_pipeline.py  test_rendering.py  test_simulation.py  test_smoke.py  test_text2circuit.py  test_validate.py
