[project]
name = "ecircuit"
version = "0.1.0"
description = "AI-powered electronic circuit design toolkit: text-to-schematic/BOM/netlist, PCB autorouting, SPICE simulation"
readme = "README.md"
authors = [
    { name = "Antony Ingram", email = "vrosuits@gmail.com" }
]
requires-python = ">=3.12"
license = "LicenseRef-Proprietary"
license-files = ["LICENCE.md"]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
]

[project.scripts]
ecircuit = "ecircuit:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
